feat: добавлены обязательные поля для площадки title, address
